--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Eat Restaurant</title>
+    <title>Gericht Restaurant</title>
   </head>
   <body>
     <div id="root"></div>
